--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "babel-register": "^6.24.0",
     "babel-runtime": "^6.11.6",
     "chai": "^4.0.2",
+    "compression-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.0",
